<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="first">Enter First Number</string>
    <string name="second">Enter Second Number</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="mul">*</string>
    <string name="divide">/</string>
    <string name="equalto">=</string>
    <string name="three">Choose operation</string>

</resources>